hiv css fix deprecated align: center;

--- a/rega-genotype/src/main/webapp/style/hiv/genotype.css
+++ b/rega-genotype/src/main/webapp/style/hiv/genotype.css
@@ -480,7 +480,7 @@ table.reftable caption{
 }
 
 .div-row {
-	align: center;
+	text-align: center;
 	
 	margin-top: 2em;
 	margin-left: auto;
